--- a/home/templates/accounts/footer.html
+++ b/home/templates/accounts/footer.html
@@ -11,11 +11,12 @@
 
 <div class="row p-3">
  
-  <div class="col-8">  <a class="text-dark" href="/home/">Tandon's SHEMS <strong>© 2023</strong></a></div>
-  <div class="col">
+  <div class="col-md-auto">  <a class="text-dark" href="/home/">Tandon's SHEMS <strong>© 2023</strong></a></div>
+  <div class="col-md-auto ml-auto">
     <div class="row">
-      <div class="col"><a class="text-dark" href="/home/">Contact Us</a></div>
-        <div class="col"><a class="text-dark" href="/home/">About Us</a></div>
+      <div class="col-auto"><a class="text-dark" href="/home/">Contact Us</a></div>
+        <div class="col-auto"><a class="text-dark" href="/home/">About Us</a></div>
+        <a class="text-dark" href="/home/">By - Sumedh n Sabarish</a>
       
     </div>
    </div>
